tests/baselines/reference/exportDeclaration.errors.txt
/b.ts(3,5): error TS2693: 'A' only refers to a type, but is being used as a value here.


==== /a.ts (0 errors) ====
    class A {}
    export type { A };
    
==== /b.ts (1 errors) ====
    import { A } from './a';
    declare const a: A;
    new A();
        ~
!!! error TS2693: 'A' only refers to a type, but is being used as a value here.
    